--- a/NWheelVehicle 5.4/NWheelVehicle.uproject
+++ b/NWheelVehicle 5.4/NWheelVehicle.uproject
@@ -73,6 +73,11 @@
 		{
 			"Name": "AnimationWarping",
 			"Enabled": true
+		},
+		{
+			"Name": "UniversalCameraPlugin",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/Fab/product/3e455250-77f9-4341-8c8b-00d7d680f1ae"
 		}
 	]
 }
