animation plays when pause menu is called still no working camera function also changed gamemode

--- a/NWheelVehicle 5.4/Config/DefaultEngine.ini
+++ b/NWheelVehicle 5.4/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/VehicleRelated/Map/BrandsHatch/BrandsHatch.BrandsHatch
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/GM_Sandbox.GM_Sandbox_C
+GlobalDefaultGameMode=/Game/Blueprints/GM_General.GM_General_C
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
