--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ Local History for Visual Studio Code
 
 Built Visual Studio Code Extensions
 *.vsix
+/NWheelVehicle 5.5/Saved
+/NWheelVehicle 5.5/Saved
+NWheelVehicle 5.5/Saved/Logs/NWheelVehicle.log
+NWheelVehicle 5.5/Saved/AutoScreenshot.png
